@@ -3,6 +3,7 @@ ags (2.3.15)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* fixed ags_strv_contains() to compare strings
 	* fixed AgsApplySoundConfig task to setup AgsWasapiDevout's AgsNotifySoundcard and AgsExportThread
+	* fixed ags_sound_resource_read_wave() to deal with different samplerates
 	* minor improvements
 
 ags (2.3.14)
